SubBox/wwwroot/css/index.css
/* ... */
.tagsOverlay {
    position: fixed;
    top: 40px;
    margin-left: 0;
    padding: 10px 0 10px 0;
    width: 550px;
    background-color: var(--nav_bg_t);
    backdrop-filter: blur(20px);
    color: var(--font_title);
    z-index: 500;
    display: block;
    border: 1px solid var(--video_bd_bot);
    border-left: none;
    border-top: none;
    box-shadow: 5px 5px 10px -8px rgba(0, 0, 0, .2);
    max-height: calc(100vh - 100px);
    overflow-y: hidden;
    overflow-x: hidden;
}

.tagsOverlay:hover {
    overflow-y: auto;
}

.tagsList {
    display: flex;
    flex-direction: column;
}

.tagsListAdd {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    height: 36px;
    padding: 12px 0 0px 18px;
    margin-top: 10px;
    border-top: 1px solid var(--font_text);
}

.tagsListAddInput {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    height: 100%;
}

    .tagsListAddInput input {
        width: 480px;
        height: 26px;
        padding: 2px;
        margin: 0;
        background: var(--bg);
        border: 1px solid var(--font_text);
    }

    .tagsListAddInput button {
        height: 32px;
        width: 32px;
        font-size: 22px;
        padding: 0;
        margin: 0;
        border: 1px solid var(--font_text);
        background: var(--bg);
    }

        .tagsListAddInput button:hover {
            background: var(--mainColor);
            color: var(--secColor);
        }

.tagsListEntry {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
    border-top: 1px solid transparent;
    border-bottom: 1px solid transparent;
    padding: 0;
}

    .tagsListEntry:hover, .tagsListEntryInEdit {
        background: var(--highlight_t);
        border-top: 1px solid var(--video_bd_bot);
        border-bottom: 1px solid var(--video_bd_bot);
        box-shadow: 0 0 10px -8px var(--font_title);
    }

.tagsListEntryContent {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    height: 40px;
    padding: 0 0 0 5px;
    font-size: 18px;
    cursor: pointer;
}

.tagsListEntryContentName {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 480px;
    margin-right: 10px;
    height: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
}

.tagsListEntryContent:hover .tagsListEntryContentEdit, .tagsListEntryInEdit .tagsListEntryContentEdit {
    display: flex;
}

.tagsListEntryInEdit .tagsListEntryContentEdit {
    border-left: 1px solid transparent;
}

.tagsListEntryContentEdit {
    display: none;
    height: 42px;
    width: 42px;
    padding: 7px;
    margin: 0;
    border-left: 1px solid var(--font_text);
}

    .tagsListEntryContentEdit:hover {
        background: var(--mainColor);
        color: var(--secColor);
    }

.tagsListEntryEdit {
    display: flex;
    flex-direction: column;
    padding: 5px 0 5px 0;
}

.tagsListEntryEditEntry {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    height: 26px;
    padding: 1px 0px 1px 41px;
}

    .tagsListEntryEditEntry:hover {
        background: var(--bg_t);
        box-shadow: 0 0 10px -8px var(--font_title);
    }

    .tagsListEntryEditEntry:hover .tagsListEntryEditEntryButton {
        display: flex;
    }

.tagsListEntryEditEntryName {
    width: 480px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.tagsListEntryEditEntryButton {
    display: none;
    height: 30px;
    width: 30px;
    padding: 2px;
    margin: 0;
    border-left: 1px solid var(--font_text);
}

    .tagsListEntryEditEntryButton:hover {
        background: var(--mainColor);
        color: var(--secColor);
    }

.tagsListEntryEditAdd {
    display: flex;
    flex-direction: row;
    height: 34px;
    padding: 10px 0px 5px 40px;
}

.tagsListEntryEditAddInput {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height: 100%;
    width: 100%;
}

    .tagsListEntryEditAddInput input {
        width: 250px;
        height: 20px;
        padding: 2px;
        margin: 0;
        background: var(--nav_bg_t);
        border: 1px solid var(--font_text);
    }

.tagsListEntryEditAddInputAddButton {
    height: 26px;
    width: 26px;
    font-size: 22px;
    padding: 0;
    margin: 0;
    margin-right: 191px;
    border: 1px solid var(--font_text);
}

    .tagsListEntryEditAddInputAddButton:hover {
        background: var(--mainColor);
        color: var(--secColor);
    }

.tagsListEntryEditAddInputRemoveButton {
    height: 32px;
    width: 32px;
    padding: 3px;
    margin: 0;
}

    .tagsListEntryEditAddInputRemoveButton:hover {
        background: var(--mainColor);
        color: var(--secColor);
    }

.videoThumb {
    position: relative;
    cursor: pointer;
}

    .videoThumb p {
        font-size: 12px;
        font-weight: 500;
        top: 105px;
        right: 3px;
        color: white;
        background: rgba(0,0,0,0.8);
        position: absolute;
        padding-left: 4px;
        padding-right: 4px;
        padding-top: 2px;
        padding-bottom: 2px;
        border-radius: 2px;
    }

.bottomDiv {
    text-align: center;
}

.bottomDivEntry {
    text-decoration: none;
    cursor: pointer;
    font-size: 12px;
    color: var(--font_title);
    margin: 20px;
    display: inline-flex;
}

    .bottomDivEntry:hover {
        color: var(--font_text);
    }

.selectedTag {
    height: 28px;
    padding: 12px 10px 0 10px;
    margin: 0 0 0 20px;
    vertical-align: middle;
    font-size: 16px;
    background: var(--mainColor);
    color: var(--secColor);
    cursor: pointer;
    max-width: 400px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.tooltip {
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}
/* ... */

